# utl-geom2d

./: .gitignore  README.rst  precommit  pyproject.toml  update-docs
.github/workflows/: publish_pypi.yml  push_docs.yml
docs/: api.html  conf.py  genindex.html  index.html  index.rst  objects.inv  requirements.txt  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/geom2d/: geom2d.arc.doctree  geom2d.box.doctree  geom2d.const.doctree  geom2d.ellipse.doctree  geom2d.plotpath.doctree  geom2d.polygon.doctree  geom2d.polyline.doctree  geom2d.transform2d.doctree  geom2d.voronoi.doctree  geom2d.voronoiclip.doctree
docs/.doctrees/geom2d api/: geom2d.arc.doctree  geom2d.box.doctree  geom2d.const.doctree  geom2d.debug.doctree  geom2d.line.doctree  geom2d.planargraph.doctree  geom2d.plotpath.doctree  geom2d.point.doctree  geom2d.polygon.doctree  geom2d.polyline.doctree  geom2d.transform2d.doctree  geom2d.voronoiclip.doctree
docs/_sources/: index.rst.txt
docs/_templates/: module.rst
docsrc/: Makefile  api.rst
docsrc/_build/doctrees/: api.doctree  environment.pickle  index.doctree
docsrc/_build/doctrees/geom2d/: geom2d.line.doctree  geom2d.planargraph.doctree  geom2d.point.doctree
docsrc/_build/html/: .buildinfo  index.html  py-modindex.html  searchindex.js
docsrc/_build/html/.doctrees/: api.doctree
docsrc/_build/html/.doctrees/geom2d/: geom2d.bezier.doctree  geom2d.debug.doctree  geom2d.fillet.doctree  geom2d.util.doctree
docsrc/_build/html/.doctrees/geom2d api/: geom2d.bezier.doctree  geom2d.ellipse.doctree  geom2d.fillet.doctree  geom2d.util.doctree  geom2d.voronoi.doctree
docsrc/_build/html/_sources/: index.rst.txt
docsrc/_build/html/_sources/geom2d/: geom2d.arc.rst.txt  geom2d.box.rst.txt  geom2d.debug.rst.txt  geom2d.fillet.rst.txt  geom2d.line.rst.txt  geom2d.planargraph.rst.txt  geom2d.transform2d.rst.txt  geom2d.util.rst.txt
docsrc/_build/html/_sources/geom2d api/: geom2d.bezier.rst.txt  geom2d.const.rst.txt  geom2d.plotpath.rst.txt  geom2d.point.rst.txt  geom2d.polyline.rst.txt  geom2d.voronoiclip.rst.txt
docsrc/_build/html/geom2d/: geom2d.arc.html  geom2d.bezier.html  geom2d.box.html  geom2d.const.html  geom2d.debug.html  geom2d.ellipse.html  geom2d.fillet.html  geom2d.line.html  geom2d.planargraph.html  geom2d.plotpath.html  geom2d.point.html  geom2d.polygon.html  geom2d.polyline.html  geom2d.transform2d.html  geom2d.util.html  geom2d.voronoi.html  geom2d.voronoiclip.html
docsrc/_build/html/geom2d api/: geom2d.arc.html  geom2d.bezier.html  geom2d.box.html  geom2d.const.html  geom2d.debug.html  geom2d.ellipse.html  geom2d.fillet.html  geom2d.line.html  geom2d.planargraph.html  geom2d.plotpath.html  geom2d.point.html  geom2d.polygon.html  geom2d.polyline.html  geom2d.transform2d.html  geom2d.util.html  geom2d.voronoi.html  geom2d.voronoiclip.html
src/contrib/: __init__.py  clipper.py
src/geom2d/: __init__.py  arc.py  bezier.py  box.py  const.py  debug.py  ellipse.py  fillet.py  line.py  planargraph.py  plotpath.py  point.py  polygon.py  polyline.py  transform2d.py  triangle.py  util.py  voronoi.py  voronoiclip.py
test/: test_arc.py  test_point.py  test_polygon.py  test_transform2d.py
tests/: README.rst  conftest.py  floateq.py  test_arc.py  test_bezier.py  test_float_eq.py  test_line.py  test_point.py  test_polygon.py  test_polyline.py
